@@ -694,7 +694,8 @@ int edgex_device_handler_config
   edgex_http_method method,
   const char *upload_data,
   size_t upload_data_size,
-  char **reply,
+  void **reply,
+  size_t *reply_size,
   const char **reply_type
 )
 {
@@ -781,6 +782,7 @@ int edgex_device_handler_config
   }
 
   *reply = json_serialize_to_string (val);
+  *reply_size = strlen (*reply);
   *reply_type = "application/json";
   json_value_free (val);
 
