@@ -113,7 +113,8 @@ int edgex_device_handler_config
   edgex_http_method method,
   const char *upload_data,
   size_t upload_data_size,
-  char **reply,
+  void **reply,
+  size_t *reply_size,
   const char **reply_type
 );
 
