@@ -20,7 +20,8 @@ extern int edgex_device_handler_discovery
   edgex_http_method method,
   const char *upload_data,
   size_t upload_data_size,
-  char **reply,
+  void **reply,
+  size_t *reply_size,
   const char **reply_type
 );
 
