@@ -33,7 +33,8 @@ typedef int (*http_method_handler_fn)
   edgex_http_method method,
   const char *upload_data,
   size_t upload_data_size,
-  char **reply,
+  void **reply,
+  size_t *reply_size,
   const char **reply_type
 );
 
