@@ -8,6 +8,8 @@ differs as follows:
 
 Changes for 1.0.0:
 
+- Events containing binary Readings are encoded using CBOR.
+  - This introduces a dependency on libcbor.
 - Data transformations (other than "mask") are applied for device PUT requests.
 - When querying for Device Profiles they are returned in a list in the same way
   as devices.
